1.3.3 (16.07.2015):

* Suppress warnings when passed boolean as empty string
  Closes LP: #844582 ("Invalid argument" when trying to scan)
* Moved config file format to JSON. JSON::PP is a core module,
  so this does not create a new dependency.
* + option not to show dialog messages


1.3.2 (13.05.2015):

* Fixed program hang displaying save dialog


1.3.1 (10.05.2015):

* Fixed bug saving PDF after thresholding
* Warn if less free space in session directory than limit set in preferences
* Fix defaults for unpaper and output-pages<->layout misalignment
* Where available in the OCR output, use the full page/column/para/line/word
  hiearchy in the djvu text layer. Closes bug #191
  (Exported DjVu with Tesseract OCR miss a lot of structure infos)
* Remove corrupt element from session after importing. Closes bug #195
  (Any operation after opening a saved session crashes the program)
* Basque translation (thanks to gorkaazk)
* Update to German translation (thanks to Tobias Bannert)
* Update to Russian translation (thanks to Aleksey Kabanov)


1.3.0 (30.01.2015):

* Avoid leading & trailing spaces in filename expanded from template
  Closes bugs #172 & #169 and Debian bug #774099.
  Thanks to Peter Marschall for the patch.
* Various GUI improvements.
  Closes Debian #774093 (various consistency updates for dialogs)
  Thanks to Peter Marschall for the patch.
* Improvements to the display of OCR output.
  Closes Debian #774094 (misc. improvements for OCR'ed texts)
  Thanks to Peter Marschall for the patch.
* More improvements to date metadata widget
  Closes Debian #774103 (fixes for date offset calculation)
  Thanks to Peter Marschall for the patch.
* + metadata for DjVu. Closes Debian #774097 (when saving as DjVU, use MetaData)
  Thanks to Peter Marschall for the patch.
* Refactored logging of OCR dependencies.
  Closes Debian #710428
  (Add "Found ocropus" to log information on application start)
* Catch many filesystem errors