@@ -221,20 +221,25 @@ t/20_Config.t
 t/211_rotate.t
 t/212_cancel_rotate.t
 t/213_rotate_with_error.t
+t/214_rotate_corrupt_image.t
 t/22_analyse_blank.t
 t/23_analyse_dark.t
 t/241_threshold.t
 t/242_cancel_threshold.t
 t/243_threshold_with_error.t
+t/244_threshold_corrupt_image.t
 t/251_negate.t
 t/252_cancel_negate.t
 t/253_negate_with_error.t
+t/254_negate_corrupt_image.t
 t/261_unsharp_mask.t
 t/262_cancel_unsharp_mask.t
 t/263_unsharp_mask_with_error.t
+t/264_unsharp_mask_corrupt_image.t
 t/271_crop.t
 t/272_cancel_crop.t
 t/273_crop_with_error.t
+t/274_crop_corrupt_image.t
 t/281_to_png.t
 t/282_cancel_to_png.t
 t/283_to_png_with_error.t
@@ -245,6 +250,7 @@ t/352_unpaper.t
 t/353_cancel_unpaper.t
 t/354_unpaper_with_error.t
 t/355_unpaper2.t
+t/356_unpaper_corrupt_image.t
 t/371_user_defined.t
 t/372_user_defined2.t
 t/373_user_defined.t
@@ -252,6 +258,7 @@ t/374_user_defined.t
 t/375_user_defined.t
 t/376_cancel_user_defined.t
 t/377_user_defined_with_error.t
+t/378_user_defined_corrupt_image.t
 t/411_tesseract.t
 t/412_tesseract_in_thread.t
 t/413_cancel_tesseract.t
